move grid horizontal scrollbar to bottom; fix edit--save

--- a/stylesheets/less/app/05-A_components.less
+++ b/stylesheets/less/app/05-A_components.less
@@ -10559,7 +10559,7 @@
 
             > .iScrollVerticalScrollbar { display: none; }
             > .iScrollHorizontalScrollbar {                 
-                top: initial !important;
+                top: auto !important;
                 bottom: 10px !important;
                 left: 10px;
                 right: 10px; //CHANGED
